# php-ls

./: .gitignore  Cargo.toml  readme.md
.cargo/: config.toml
examples/: query.rs  query2.rs  tree.rs
migrations/: 20240124130713_INIT.sql
src/: db.rs  indexer.rs  lib.rs  utils.rs
src/indexer/: class_declaration.rs  class_reference.rs  function_declarion.rs  index.rs
