[package]
name = "php-ls"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde_json = "1.0.59"
serde = { version = "1.0", features = ["derive"] }
lsp-server = "0.7.4"
crossbeam-channel = "0.5.6"
log = "0.4.17"
lsp-types = "0.94.1"
log4rs = "1.2.0"
walkdir = "2.4.0"
clap = { version = "4.4.7", features = ["derive", "env"] }
tree-sitter = "0.20"
tree-sitter-php = { git = "https://github.com/tree-sitter/tree-sitter-php.git", tag = "v0.22.2" }
rayon = "1.8.0"
env_logger = "0.11.0"
dotenv = "0.15.0"
anyhow = "1.0.79"
sqlx = { version = "0.7.3", features = ["sqlite", "runtime-tokio"] }
tokio = { version = "1.35.1", features = ["full"] }
#surrealdb = {git="https://github.com/surrealdb/surrealdb.git", tag="v1.1.2"}

[dev-dependencies]
lsp-types = "=0.94"
cc="*"
